--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li>About</li>
                 <li>Contact</li>
                 <li>Test</li>
-                <li>OOk</li>
+                <li>my new List</li>
             </ul>
         </nav>
     </header>
